# Solana-web3-academy

./: README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: About.tsx  Background.tsx  CTA.tsx  Contact.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  index.ts
frontend/src/contexts/: NavigationContext.tsx
frontend/src/hooks/: useRouter.ts
frontend/src/pages/: ComingSoon.tsx  Connect.tsx  Whitepaper.tsx
frontend/src/services/: api.ts
server/: .gitignore  README.md  app.js  endpoints.md  load-test.yml  package-lock.json  package.json  server.js  sonar.properties
server/idl/: idl.json  idl.json:Zone.Identifier
server/security-test/: dynamicAnalysisTest.md  penetrationTest.js  staticAnalysisTest.md
server/src/: app.js  server.js
server/src/config/: dbConfig.js  env.js
server/src/contractService/: ipfsService.js  solanaService.js
server/src/middleware/: authMiddleware.js  errorMiddleware.js  rateLimiter.js  roleCheck.js  uploadMiddleware.js  validator.js
server/src/templates/: certificateTemplate.ejs  (+6 more)
server/tests/: authTest.test.js
smart-contract/web3_academy/: Anchor.toml  Cargo.toml  package-lock.json  package.json
smart-contract/web3_academy/programs/web3_academy/: Cargo.toml
smart-contract/web3_academy/programs/web3_academy/src/: error.rs  instruction.rs  instructions.rs  lib.rs
smart-contract/web3_academy/programs/web3_academy/src/state/: assignment.rs  cohort.rs  course.rs  enrollement.rs  enrollementAcc.rs  mod.rs  role.rs  submission.rs  trasnferNft.rs
(+51 files in other folders)
